# bitcointap

./: .gitignore  Cargo.toml  README.md  shell.nix
bitcointap/: Cargo.toml
bitcointap/src/: error.rs  event.rs  lib.rs  main.rs  tap.rs  tracepoint.rs
extractor/: Cargo.toml
shared/: Cargo.toml
shared/src/: event_msg.rs  lib.rs
