[package]
name = "bitcointap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
prost = "0.13"
libbpf-rs = "0.24"
simple_logger = "5.0.0"
serde_json = "1"
clap = { version = "4.5.27", features = ["derive"] }

[build-dependencies]
libbpf-cargo = "0.24"

[features]
# Treat warnings as a build error.
strict = []
